share/cascade/test/regression/type_check/fail/issue_60a.v
wire x;
initial begin
  $display("no args", x);
  $finish;
end
